--- a/pagina.html
+++ b/pagina.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escuela Técnica 35 - Eduardo Latzina</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -308,6 +308,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="funcionamiento.js"></script>
 </body>
 </html>
