--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
             <p>Fundada en 1951, somos una institución con tradición en educación técnica. Ubicada en Lope de Vega 2150, Buenos Aires.</p>
             <div class="grid">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200?text=Edificio+Escuela" alt="Edificio de la Escuela">
+                    <img src="https://et35-vue.pages.dev/images/ET35%20Frente.png" alt="Edificio de la Escuela">
                     <h3>Edificio Histórico</h3>
                     <p>Construido en 1948, con talleres modernos y laboratorios actualizados.</p>
                 </div>
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200?text=Especialidades" alt="Especialidades">
+                    <img src="https://www.google.com/imgres?q=compu%20y%20motor&imgurl=https%3A%2F%2Fpreviews.123rf.com%2Fimages%2Fpaylessimages%2Fpaylessimages1503%2Fpaylessimages150349756%2F49359024-engine-and-laptop.jpg&imgrefurl=https%3A%2F%2Fes.123rf.com%2Fphoto_49359024_el-motor-y-la-computadora-port%25C3%25A1til.html&docid=Lj1U4a3HAjHUKM&tbnid=95ip5pIfqP9lnM&vet=12ahUKEwjeuqz_ifWPAxUAHbkGHdcdBYMQM3oECBoQAA..i&w=1300&h=866&hcb=2&ved=2ahUKEwjeuqz_ifWPAxUAHbkGHdcdBYMQM3oECBoQAA" alt="Especialidades">
                     <h3>Especialidades</h3>
                     <p>Automotores y Computación: Preparándote para el futuro laboral.</p>
                     <a href="especialidades.html">Ver más</a>
                 </div>
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200?text=Campamento+Suyai" alt="Campamento Suyai">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQODBK12FvsZuXAbJDSEL6kR2-ho3wEywZiHA&s" alt="Campamento Suyai">
                     <h3>Campamento Suyai</h3>
                     <p>Experiencias únicas en la naturaleza para el desarrollo personal.</p>
                     <a href="campamento-suyai.html">Explorar</a>
@@ -78,7 +78,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Escuela Técnica 35 - Eduardo Latzina. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Escuela Técnica 35 - Eduardo Latzina. Todos los derechos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
