--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <p>Construido en 1948, con talleres modernos y laboratorios actualizados.</p>
                 </div>
                 <div class="card">
-                    <img src="https://www.google.com/imgres?q=compu%20y%20motor&imgurl=https%3A%2F%2Fpreviews.123rf.com%2Fimages%2Fpaylessimages%2Fpaylessimages1503%2Fpaylessimages150349756%2F49359024-engine-and-laptop.jpg&imgrefurl=https%3A%2F%2Fes.123rf.com%2Fphoto_49359024_el-motor-y-la-computadora-port%25C3%25A1til.html&docid=Lj1U4a3HAjHUKM&tbnid=95ip5pIfqP9lnM&vet=12ahUKEwjeuqz_ifWPAxUAHbkGHdcdBYMQM3oECBoQAA..i&w=1300&h=866&hcb=2&ved=2ahUKEwjeuqz_ifWPAxUAHbkGHdcdBYMQM3oECBoQAA" alt="Especialidades">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7AZm7vodH7j9c1_wfDAj2qZKtKzxmIPnS8Q&s" alt="Especialidades">
                     <h3>Especialidades</h3>
                     <p>Automotores y Computación: Preparándote para el futuro laboral.</p>
                     <a href="especialidades.html">Ver más</a>
