--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <p>Construido en 1948, con talleres modernos y laboratorios actualizados.</p>
                 </div>
                 <div class="card">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7AZm7vodH7j9c1_wfDAj2qZKtKzxmIPnS8Q&s" alt="Especialidades">
+                    <img src="C:\Users\fabri\OneDrive\Imágenes\animacion\mecanico-que-usa-computadora-portatil-mientras-que-servicio-motor-automovil_1170-1304.jpg" alt="Especialidades">
                     <h3>Especialidades</h3>
                     <p>Automotores y Computación: Preparándote para el futuro laboral.</p>
                     <a href="especialidades.html">Ver más</a>
