--- a/campamento-suyai.html
+++ b/campamento-suyai.html
@@ -44,17 +44,17 @@
             
             <div class="grid">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200?text=Cabaña+Principal" alt="Cabaña principal del campamento Suyai">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUDldFa6oFyhCRS6nMmF12Wpyr5jz1JHJECA&s" alt="Cabaña principal del campamento Suyai">
                     <h3>Cabaña Principal</h3>
                     <p>Comedor, Cocina, Despensa, Sanitarios, Sala de duchas y Oficina-Enfermería</p>
                 </div>
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200?text=Cabaña+Dormitorio" alt="Cabaña dormitorio con habitaciones">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx2U11Fj8IPBrpoPwS9QjxdBiEeiMeKHviMQ&s" alt="Cabaña dormitorio con habitaciones">
                     <h3>Cabaña Dormitorio</h3>
                     <p>10 habitaciones para 4-5 acampantes cada una, habitación individual y baño</p>
                 </div>
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200?text=Actividades+Al+Aire+Libre" alt="Estudiantes realizando actividades al aire libre">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSi-9cNe_OogXdWHnpnYZfkXnBTy21USgwcUQ&s" alt="Estudiantes realizando actividades al aire libre">
                     <h3>Actividades Recreativas</h3>
                     <p>Deportes, juegos, fogones y experiencias en la naturaleza</p>
                 </div>
@@ -99,7 +99,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Escuela Técnica 35 - Eduardo Latzina. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Escuela Técnica 35 - Eduardo Latzina. Todos los derechos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
